--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,13 @@
     }
   ],
   "require": {
-    "guzzlehttp/guzzle": "~6.0"
+    "guzzlehttp/guzzle": "~6.0",
+    "illuminate/support": "~5.5",
+    "siriusphp/validation": "^2.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.0.*"
+    "phpunit/phpunit": "^6.0",
+    "mockery/mockery": "^1.0"
   },
   "autoload": {
     "psr-4": {
