--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "require": {
     "guzzlehttp/guzzle": "~6.0",
     "illuminate/support": "~5.5",
-    "siriusphp/validation": "^2.2"
+    "siriusphp/validation": "^2.2",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0",
